[project]
name = "ml-system-design"
version = "0.1.0"
description = "Machine Learning System Design Interview"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["**/.venv"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
